Dont leak connections from the pools when there is an exception. SERVER-6133